# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "learning"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "cli_discovery"
path = "src/cli_discovery.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"


[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
